feat(course)：新增 /v2/favorite/courses [GET] 獲取課表收藏列表 api
