# internal/v2/controller/course/controller.go
@@ -19,6 +19,34 @@ func New(resolver course.Resolver) Controller {
 	return &controller{resolver: resolver}
 }
 
+// GetFavoriteCourses 獲取課表收藏列表
+// @Summary 獲取課表收藏列表
+// @Description 獲取課表收藏列表
+// @Tags 收藏_v2
+// @Accept json
+// @Produce json
+// @Security fitness_token
+// @Param page query int true "頁數(從第一頁開始)"
+// @Param size query int true "筆數"
+// @Success 200 {object} course.APIGetFavoriteCoursesOutput "成功!"
+// @Failure 400 {object} base.Output "失敗!"
+// @Router /v2/favorite/courses [GET]
+func (c *controller) GetFavoriteCourses(ctx *gin.Context) {
+	uid, exists := ctx.Get("uid")
+	if !exists {
+		ctx.JSON(http.StatusBadRequest, baseModel.InvalidToken())
+		return
+	}
+	input := model.APIGetFavoriteCoursesInput{}
+	input.UserID = uid.(int64)
+	if err := ctx.ShouldBindQuery(&input.Form); err != nil {
+		ctx.JSON(http.StatusBadRequest, baseModel.BadRequest(util.PointerString(err.Error())))
+		return
+	}
+	output := c.resolver.APIGetFavoriteCourses(&input)
+	ctx.JSON(http.StatusOK, output)
+}
+
 // GetCMSCourses 獲取課表列表
 // @Summary 獲取課表列表
 // @Description 獲取課表列表
