# internal/v2/model/review_statistic/output.go
@@ -1,0 +1,8 @@
+package review_statistic
+
+type Output struct {
+	Table
+}
+func (Output) TableName() string {
+	return "review_statistics"
+}
